# Investment-Project

./: .env.local.example  .gitattributes  .gitignore  AGENTS.md  AUDIT.md  FIX_PLAN.md  README.md
market_app/: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  FIX_PLAN.md  Finnhub_scripts.txt  README.md  acceptance_test.ps1  config.example.yaml  config.json  config.json.bak  config.json.bak_20260117_224501  config.json.bak_20260117_225034  config.json.bak_20260117_230234  config.json.bak_20260117_231512  config.yaml  convert_us_txt_to_ohlcv_csv.py  doctor.ps1  doctor.ps1.bak_20260117_232037  monitor.py  monitor_v2.py  mypy.ini  provision_data.ps1  pyproject.toml  pyproject.toml.bak_20260215_115204  pyproject.toml.bak_minfix_20260215_161657  pytest.ini  requirements.txt  run.ps1  run_all.ps1  run_universe.ps1  run_universe.ps1.bak_20260111_131630  seed_watchlist.csv  seed_watchlist_dedup.csv  setup.ps1  tmp_report.md  watchlist.txt
market_app/_backup_doctor_preflight/: doctor_20260111_223421.ps1
market_app/_backup_domain_swap/: runner_20260111_222903.py
market_app/_backup_limittexts/: runner_20260111_223357.py  runner_20260111_223816.py
market_app/config/: config.yaml  config_loose.yaml  logging.yaml  policy_scenarios.yaml  policy_sources.yaml  sector_overrides.csv  sources.yaml  universe_required.csv  watchlists.yaml
market_app/configs/: acceptance.yaml  watchlists.yaml
market_app/data/: sic_codes.csv  watchlist.txt
market_app/docs/: REPO_AUDIT.md  application_overview.md  architecture.md  blueprint_gap_analysis.md  bulk_downloader.md  data_contracts.md  data_provenance.md  data_workflow.md  file_manifest.json  offline_data_layout.md  offline_metadata_pack.md  offline_metadata_provisioning.md  offline_quickstart_windows.md  offline_watchlist_checklist.md  product_roadmap.md  quickstart.md  release.md  spec_traceability.md  stooq_metastock_notes.md  troubleshooting.md  usage.md
market_app/inputs/: watchlist.txt
market_app/market_app/: __init__.py
market_app/market_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
market_app/market_monitor/: __init__.py  __main__.py  cache.py  cli.py  config_schema.py  data_paths.py  determinism.py  doctor.py  env_doctor.py  etf_holdings.py  evaluate.py  features.py  folder_to_parquet.py  fred.py  gates.py  hash_utils.py  io.py  logging_utils.py  macro.py  manifest.py  offline.py  ohlcv_doctor.py  ohlcv_utils.py  paths.py  pipeline.py  policy_event_schema.py  policy_events.py  policy_explain.py  policy_exposure.py  policy_features.py  policy_manifest.py  policy_regimes.py  policy_score.py  prediction.py  preflight.py  provider_factory.py  provision.py  quant_math.py  regime.py  report.py  (+16 more)
market_app/output/: eligible_20260111.csv  eligible_20260111_163524.csv  features_20260111_163524.csv  scored_20260111.csv  scored_20260111_163524.csv
market_app/outputs/: candidates.csv
market_app/py/: append_json_row.py  compute_features.py.bak_20260111_131630  score_security.py  score_security.py.bak_20260111_011044  score_security.py.bak_20260111_131630
market_app/runs_acceptance/: d1.pretty.json  d2.pretty.json
market_app/scripts/: acceptance.ps1  acceptance_gate.ps1  acceptance_gate.sh  acceptance_offline_spy.ps1  bootstrap.ps1  bootstrap.sh  build_exe.ps1  check_watchlist_ohlcv.ps1  check_watchlist_ohlcv.sh  git_hygiene_check.ps1  install_e2e_desktop_shortcut.ps1  offline_one_command.ps1  provision_data.ps1  provision_metadata.ps1  provision_sec_metadata.ps1  run.ps1  run.sh  run_all.ps1  run_e2e.ps1  run_e2e.sh  run_monitor.example.ps1  run_monitor.ps1  run_smoke.ps1  runner.py  update_and_run.ps1  verify_local.ps1  verify_ready_for_gui.ps1
market_app/tests/: conftest.py  test_build_universe_available.py  test_bulk_manifest.py  test_bulk_planner.py  test_bulk_registry.py  test_bulk_standardize.py  test_cli_freshness_backfill.py  test_cli_gui_contract.py  test_gates.py  (+80 more)
(+12854 files in other folders)
