[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-app"
version = "0.1.0"
description = "Offline-first market monitor and watchlist tooling."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = ".", "market_app" = "src/market_app"}

[tool.setuptools.packages.find]
where = ["."]
include = ["market_monitor*", "market_app*"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(\\.venv|_backup|_backup_.*|data_cache|outputs|output)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".venv",
  "_backup",
  "_backup_*",
  "data",
  "data_cache",
  "outputs",
  "output",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["market_monitor", "market_app"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = false
disallow_incomplete_defs = false
exclude = ["_backup", "_backup_.*", "data", "data_cache", "outputs", "output"]

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
